[#674] Implement automatic loading of extensions from working directory